--- a/DA_Moble/pubspec.yaml
+++ b/DA_Moble/pubspec.yaml
@@ -36,7 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # websafe_svg: ^1.1.4
 
+  # state management, intelligent dependency injection, and route management
+  #get: ^3.24.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
