--- a/DA_Moble/pubspec.yaml
+++ b/DA_Moble/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+ get: ^4.6.5
   flutter:
     sdk: flutter
 
@@ -36,10 +37,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  # websafe_svg: ^1.1.4
+  websafe_svg: ^2.1.2+7
 
   # state management, intelligent dependency injection, and route management
-  #get: ^3.24.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
