--- a/DA_Moble/pubspec.yaml
+++ b/DA_Moble/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_auth: ^4.1.2
   cloud_firestore: ^4.0.5
   firebase_core: ^2.2.0
+  curved_navigation_bar: ^1.0.3
+  # giffy_dialog: ^1.8.0
 
   # state management, intelligent dependency injection, and route management
 
@@ -72,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/
+   - data/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
